--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-nguage: ruby
+language: ruby
 rvm:
   - 2.2.3
-before_install: gem install bundler -v 1.10.4
+before_install: gem install bundler -v 1.11.2
